--- a/mock-data-recipient/mock-data-recipient-ingress.yaml
+++ b/mock-data-recipient/mock-data-recipient-ingress.yaml
@@ -4,10 +4,10 @@ kind: Ingress
 metadata:
   name: mock-data-recipient
   annotations:
-    nginx.ingress.kubernetes.io/use-regex: "true"
+#    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
-    kubernetes.io/ingress.class: "addon-http-application-routing"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    kubernetes.io/ingress.class: "external-mtls"
 spec:
 #  tls:
 #  - hosts:
