--- a/mock-register/mock-register-ingress-admin.yaml
+++ b/mock-register/mock-register-ingress-admin.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: mock-register
+  name: mock-register-admin
   annotations:
 #    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
@@ -11,11 +11,11 @@ metadata:
 spec:
 #  tls:
 #  - hosts:
-#      - mock-register.markhogben.com
+#      - mock-register-admin.markhogben.com
 #    secretName: mock-register-tls
 
   rules:
-    - host: mock-register.markhogben.com
+    - host: mock-register-admin.markhogben.com
       http:
         paths:
           - path: /
@@ -24,4 +24,4 @@ spec:
               service:
                 name: mock-register
                 port:
-                  number: 7000
+                  number: 7006
